# RT2_Unige

./: CMakeLists.txt  Doxyfile.in  README.md  conf.py  package.xml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
_build/doctrees/: environment.pickle  index.doctree  rt2_assigment1.doctree
_build/html/: .buildinfo  dir_0955980d14f17cd6550a3da474f4bb84.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  genindex.html  globals.html  globals_func.html  globals_vars.html  go__to__point_8py.html  index.html  md__r_e_a_d_m_e.html  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespaceuser__interface.html  objects.inv  position__service_8cpp.html  position__service_8cpp__incl.map  position__service_8cpp__incl.md5  py-modindex.html  rt2_assigment1.html  search.html  searchindex.js  state__machine_8cpp.html  state__machine_8cpp__incl.map  state__machine_8cpp__incl.md5  user__interface_8py.html
_build/latex/: files.tex  go__to__point_8py.tex  md__r_e_a_d_m_e.tex  namespacego__to__point.tex  namespaceuser__interface.tex  position__service_8cpp.tex  position__service_8cpp__incl.md5  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5  user__interface_8py.tex
_build/xml/: _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  conf_8py.xml  dir_0955980d14f17cd6550a3da474f4bb84.xml  doxygen__log_8txt.xml  go__to__point_8py.xml  index.xml  md__r_e_a_d_m_e.xml  namespaceconf.xml  namespacego__to__point.xml  namespacert2__assignment1.xml  namespaceuser__interface.xml  position__service_8cpp.xml  state__machine_8cpp.xml  urdf_2conf_8py.xml  user__interface_8py.xml
action/: Assignment1.action
coppelia_scenes/: RobotnikScene.ttt
doc/: Doxyfile
doc/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classrt2__assignment1_1_1_position__srv-members.html  files.html  functions.html  index.html  (+35 more)
docs/: Doxyfile  doxygen_log.txt
launch/: Robotnik_coppelia_scene.launch  bridge.launch  sim_launch.py
notebook/: RT2_assignment2.ipynb
scripts/: go_to_point.py  user_interface.py
sources/: bridge_rt2.sh  ros.sh  ros2.sh
src/: position_service.cpp  state_machine.cpp
(+296 files in other folders)
